samples/_failures_safe/1761139511_0b25ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb0e1d3a.c: In function ‘main’:
./samples/SAFE/__tmp_fb0e1d3a.c:142:9: error: expected expression at end of input
  142 |         for (int i = 0; i <
      |         ^~~
./samples/SAFE/__tmp_fb0e1d3a.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb0e1d3a.c:142:9: error: expected declaration or statement at end of input
